Bug:  PRD Reviewer:  Self Comments:  Changes for GWT based binder views.  {80th} 1. Fixed the positioning of the About box.  Sometimes, it wouldn't get    centered correctly. 2. Commented out my "Rats..." alert when overridding the sidebar    spinner. 3. Bumped the timer to 10 seconds before overridding the sidebar    spinner. 4. Commented out the alert displayed on an attempt to perform an    overlapping context menu creation. 5. Added a vertical scroll bar, as necessary, to the data table views.
Files:
M    gwt/src/org/kablink/teaming/gwt/client/widgets/MainMenuControl.java
M    gwt/src/org/kablink/teaming/gwt/client/workspacetree/TreeDisplayVertical.java
M    gwt/src/org/kablink/teaming/gwt/client/binderviews/DataTableFolderViewBase.java
M    gwt/src/org/kablink/teaming/gwt/public/GwtBinderViews.css
M    gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -17,6 +17,8 @@
 .displayBlock       { display: block;        }
 .displayInline      { display: inline;       }
 .displayInlineBlock { display: inline-block; }
+
+.vibe-verticalScroll {overflow-y: auto;}
 	
 /* Styles used with the activity stream control */
 .activityStreamCtrl
